<resources>
    <string name="app_name">WishListApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="btn_movie_cancel">Cancel</string>
    <string name="btn_movie_accept">Accept</string>

    <string name="movie_genre_title">Genre:</string>
    <string name="movie_rating_title">Rating*:</string>

    <string name="action_settings">settings</string>

    <string name="radio_movie_unseen">Unseen</string>
    <string name="radio_movie_seen">Seen</string>

    <string name="radio_book_read">Read</string>
    <string name="radio_book_unread">Unread</string>

    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_seen">Seen</string>
    <string name="action_read">Read</string>

    <string name="action_done">Done</string>

</resources>
