<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio_group_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/general">

        <RadioButton
            android:id="@+id/radio_movie_unseen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_movie_unseen"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radio_movie_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_movie_seen"
            android:layout_weight="1"/>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_enter_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general"
        android:layout_marginRight="@dimen/general">

        <EditText
            android:id="@+id/edt_enter_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general"
            android:text="@string/movie_genre_title" />

        <Spinner
            android:id="@+id/spinner_movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"/>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_enter_movie_release_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general"
        android:layout_marginRight="@dimen/general">

        <EditText
            android:id="@+id/edt_enter_movie_release_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/lin_layout_movie_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general"
            android:text="@string/movie_rating_title" />

        <Spinner
            android:id="@+id/spinner_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"/>

    </LinearLayout>

    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_enter_movie_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/btn_movie_cancel"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btn_enter_movie_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/btn_movie_accept"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

</LinearLayout>